Finish majority mobile pages.

--- a/accounts/templates/accounts/account_change/password_change_done.html
+++ b/accounts/templates/accounts/account_change/password_change_done.html
@@ -21,5 +21,17 @@
     .container i {
         font-size: 4em;
     }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 85vw;
+            margin: auto;
+            margin-top: 30px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+    }
 </style>
 {% endblock %}
