--- a/accounts/templates/accounts/account_change/password_change_form.html
+++ b/accounts/templates/accounts/account_change/password_change_form.html
@@ -71,12 +71,24 @@
     }
     .heading {
         font-size: 4vh;
+        line-height: 4vh;
         font-weight: 300;
         padding-top: 2vh;
         color: #150e41;
         font-family: 'Montserrat', sans-serif;
         font-weight: bold;
         margin-bottom: 4vh;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 85vw;
+            margin-bottom: 20px;
+        }
+
+        a {
+            text-decoration: none;
+        }
     }
 </style>
 {% endblock %}
