--- a/accounts/templates/accounts/account_change/settings.html
+++ b/accounts/templates/accounts/account_change/settings.html
@@ -124,5 +124,13 @@
         margin-top: 0.5vh !important;
         margin-bottom: 3vh !important;
     }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 85%;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+    }
 </style>
 {% endblock %}
