--- a/brand/templates/brand/base.html
+++ b/brand/templates/brand/base.html
@@ -356,6 +356,10 @@
                 width: 35px;
                 height: 35px;
             }
+
+            button.sidenav-btn {
+                height: 60px;
+            }
         }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
