--- a/influencer/templates/influencer/inactive_base.html
+++ b/influencer/templates/influencer/inactive_base.html
@@ -87,6 +87,7 @@
                     <div class="logo-text">ENDORSITY</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
+                {% comment %}
                 <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         How It Works
@@ -109,6 +110,7 @@
                         &nbsp;&nbsp;FAQ
                     </button>
                 </a>
+                {% endcomment %}
                 <button id="settings-menu" class="mdl-button mdl-js-button mdl-button--icon">
                     <i class="material-icons">account_circle</i>
                 </button>
