--- a/accounts/templates/accounts/account_change/base.html
+++ b/accounts/templates/accounts/account_change/base.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
@@ -85,6 +87,37 @@
             vertical-align: middle;
             font-size: 1.3em;
         }
+
+        .mobile-back {
+            display: none;
+        }
+
+        @media only screen and (max-width: 900px) {
+            .mdl-layout__header-row .mdl-navigation__link {
+                display: none;
+            }
+
+            .mdl-layout__header-row {
+                padding: 10px;
+            }
+
+            .logo-img {
+                height: 40px;
+            }
+
+            .logo-text {
+                font-size: 25px;
+            }
+
+            .mdl-layout--fixed-header>.mdl-layout__header {
+                margin-top: 10px;
+            }
+
+            .mobile-back {
+                margin-top: 5px;
+                display: initial;
+            }
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
@@ -98,6 +131,12 @@
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                         <i class="material-icons">dashboard</i>
                         &nbsp;&nbsp;Return To Dashboard
+                    </button>
+                </a>
+                <a class="mobile-back" href="{% url 'accounts:landing' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                        <i class="material-icons">keyboard_backspace</i>
+                        &nbsp;&nbsp;Return
                     </button>
                 </a>
             </div>
