--- a/accounts/templates/accounts/account_change/profile_picture_change.html
+++ b/accounts/templates/accounts/account_change/profile_picture_change.html
@@ -37,6 +37,7 @@
 
     .heading {
         font-size: 4vh;
+        line-height: 4vh;
         font-weight: 300;
         padding-top: 2vh;
         color: #150e41;
@@ -68,6 +69,16 @@
         margin: auto;
         margin-top: 1.2vh;
         margin-bottom: 2vh;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 90vw;
+        }
     }
 </style>
 {% endblock %}
