--- a/brand/templates/brand/add_location.html
+++ b/brand/templates/brand/add_location.html
@@ -61,5 +61,17 @@
         color: #515151;
         font-size: 2.5vh;
     }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 90vw;
+            margin-top: 20px;
+        }
+
+        .heading {
+            font-size: 25px;
+            line-height: 25px;
+        }
+    }
 </style>
 {% endblock %}
