--- a/brand/templates/brand/qr_code.html
+++ b/brand/templates/brand/qr_code.html
@@ -7,7 +7,7 @@
 </div>
 <style>
     .container {
-        background-color: #eeeeee;
+        background-color: #fff;
         width: fit-content;
         margin: auto;
         margin-top: 3vh;
@@ -18,6 +18,18 @@
     .heading {
         font-size: 2.5em;
         padding-top: 2vh;
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 95vw;
+        }
+
+        svg {
+            width: 100%;
+            height: auto;
+        }
     }
 </style>
 {% endblock %}
